# llm_orchestrator

./: .gitignore  .pre-commit-config.yaml  Dockerfile  INSTRUCTIONS.md  PROJECT_SUMMARY.md  README.md  ROADMAP.md  config.yaml  example_vault_input.txt  explainer.md  memory.db  mkdocs.yml  models.yaml  pyproject.toml  requirements.txt  settings.py  setup.ipynb  setup_interactive.sh
.devcontainer/: devcontainer.json
app/: chat.py  clients.py  executor.py  init_vault.py  key_management.py  loader.py  main.py  memory_manager.py  memory_store.py  orchestrator.py  session.py  workflow_engine.py  workflow_models.py
app/tools/: __init__.py  base.py  model_call.py  parallel_query.py
conversations/: chat_20250724_235828.json  chat_20250725_000101.json  chat_20250725_000759.json  chat_20250725_012552.json  chat_20250725_013458.json  chat_20250725_013912.json  chat_20250725_014142.json
docs/: ROADMAP.md  TUTORIAL.md  api-key-setup.md  contributing.md  future-development.md  index.md  project-structure.md
docs/about/: core_concepts.md
docs/architecture/: c1-system-context.md  c2-container-diagram.md  c3-component-diagram.md
docs/architecture/adr/: 000-template.md  001-choice-of-click-for-cli.md  002-encryption-method-for-secure-vault.md
docs/cline/: phase2-core-workflow-engine.md  phase3-real-tools-integration.md  phase4-advanced-memory-management.md  phase6-planning-assessment.md
docs/source/: api.rst  conf.py  index.rst
docs/source/about/: legacy.md
docs/source/usage/: chains.md  commands.md  getting_started.md
docs/usage/: cli-reference.md  commands.md  configuration.md  installation.md  memory-system.md
private/: gemini_cli_conversation.txt
scripts/: create_summary.py  generate_summary.py  init_vault.py  load_env_keys.py  run_workflow.py  setup_android.sh  setup_env.py  setup_windows.ps1  test_memory_system.py  test_real_tools.py  test_workflow_engine.py  vault_manager.py
site/: 404.html  index.html
site/about/core_concepts/: index.html
site/about/legacy/: index.html
site/search/: search_index.json
site/usage/chains/: index.html
site/usage/commands/: index.html
site/usage/configuration/: index.html
site/usage/getting_started/: index.html
site/usage/installation/: index.html
tests/: test_cli.py  test_core_logic.py  test_providers.py
